created profiles controller

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <%= render 'shared/nav' %> 
  
-  <h1>Index</h1>
+  <h1>Terrarium-Town</h1>
   <div class='listing'>
     <% @listings.each do |listing| %>
     
