--- a/app/assets/stylesheets/listings/listings.scss
+++ b/app/assets/stylesheets/listings/listings.scss
@@ -7,35 +7,35 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
-
 }
 
 .listing{
-  // display: flex;
-  // flex-wrap: wrap;
-  // height: 25vh;
-  // width: 50%;
+  width: 50%;
+  display: grid;
+  // grid-template-rows: 1fr 1fr 1fr;
+  // grid-template-columns: 1fr 1fr 1fr;
   .listing-title{
-
+  
   }
   .sale{
-
+   
   }
   .listing-description{
-
+  
   }
   .listing-size{
-
+ 
   }
   .listing-image{
+
     img{
-      height: 300px;
-      width: 300px;
+      height: 200px;
+      width: 200px;
       object-fit: cover;
     }
   }
   .listing-user{
-
+  
   }
   .show-button{
 
