--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -2,18 +2,36 @@
 
 <h1>Listing <%= "#{@listing.id}" %></h1>
 
-<p><%= @listing.title %></p>
-<p><%= @listing.price %></p>
-<p><%= @listing.description %></p>
-<p><%= @listing.sale_type %></p>
-<p><%= @listing.size %></p>
-<p><%= @listing.image %></p>
-<p><%= @listing.user.email %></p>
+<div class='show-container'>
+  <div class='show-image'>
+    <img src=<%= @listing.image %>>
+    <%= image_tag @listing.picture if @listing.picture.attached? %>
+  </div>
+  <div class='show-image'>
+    <p><%= @listing.title %></p>
+  </div>
+  <div class='show-sale'>
+    <% if @listing.sale_type.to_i == 1 %>
+      <p>$<%= @listing.price %></p>
+    <% elsif @listing.sale_type.to_i == 2 || 3 %>
+      <p><%= number_to_sale_type(@listing.sale_type) %></p>
+    <% end %>
+  </div>
+  <div class='show-description'>
+    <p><%= @listing.description %></p>
+  </div>
+  <div class='show-size'>
+    <p><%= @listing.size %></p>
+  </div>
+  <div class='show-user'>
+    <p><%= @listing.user.email %></p>
+  </div>
 
-<div class="show-edit-delete">
-  <% if can? :edit, @listing %>
-   <%= link_to "Edit", edit_listing_path(@listing.id) %>
-   <%= link_to "Delete", listing_path(@listing.id), method: :delete %>
-  <% end %>
-  <%= link_to "Back", :back %>
+  <div class="show-edit-delete">
+    <% if can? :edit, @listing %>
+    <%= link_to "Edit", edit_listing_path(@listing.id) %>
+    <%= link_to "Delete", listing_path(@listing.id), method: :delete %>
+    <% end %>
+    <%= link_to "Back", :back %>
+  </div>
 </div>
