--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,12 @@
-<%= link_to "Home", listings_path%>
 
-<% if user_signed_in? %>
-    <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-<% else %>
-    <%= link_to "Sign in", new_user_session_path %>
-<% end %>
+<nav>
+    <%= link_to "Home", listings_path %>
+
+    <% if user_signed_in? %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+    <% else %>
+        <%= link_to "Sign in", new_user_session_path %>
+    <% end %>
+
+    <%= link_to "Profile", profile_path(id: current_user.id) %>
+</nav>
