--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <%= render 'shared/nav' %> 
  
-  <h1>Terrarium-Town</h1>
+  <h1><%= @user.username %>'s Terrarium Town</h1>
   <%= render 'shared/listings' %>
 </div>
