--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,13 +4,10 @@
 
     <% if user_signed_in? %>
         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Profile", profile_path(id: current_user.id) %>
+        <%= link_to "My Terrariums", dashboard_path(id: current_user.id) %>
     <% else %>
         <%= link_to "Sign in", new_user_session_path %>
-    <% end %>
-
-    <% if user_signed_in? %>
-        <%= link_to "Profile", profile_path(id: current_user.id) %>
-    <% else %>
-         <%= link_to "Profile", new_user_session_path %> 
+         <%= link_to "My Terrariums", new_user_session_path %> 
     <% end %>
 </nav>
