--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,6 +4,7 @@
 
     <% if user_signed_in? %>
         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Create Listing", new_listing_path %>
         <%= link_to "Profile", profile_path(id: current_user.id) %>
         <%= link_to "My Terrariums", dashboard_path(id: current_user.id) %>
     <% else %>
