--- a/app/views/shared/_listings.html.erb
+++ b/app/views/shared/_listings.html.erb
@@ -1,31 +1,39 @@
-  <div class='listing'>
-    <% @listings.each do |listing| %>
-    
-    <div class='listing-image'>
+<div class='listing'>
+  <% @listings.each do |listing| %>
+  
+  <div class='listing-image'>
+    <a href=<%= listing_path(listing) %>>
       <img src=<%= listing.image %>>
-      <%= image_tag listing.picture if listing.picture.attached? %>
-    </div>
-    <div class='listing-title'>
-      <p><%= listing.title %></p>
-    </div>
-    <div class='sale'>
-      <% if listing.sale_type.to_i == 1 %>
-        <p>$<%= listing.price %></p>
-      <% elsif listing.sale_type.to_i == 2 || 3 %>
-        <p><%= number_to_sale_type(listing.sale_type) %></p>
-      <% end %>
-    </div>
-    <div class='listing-description'>
-      <p><%= listing.description %></p>
-    </div>
-    <div class='listing-size'>
-      <p><%= number_to_size(listing.size) %></p>
-    </div>
-    <div class='listing-user'>
-      <p><%= link_to "#{listing.user.profile.username}", dashboard_path(id: listing.user.id)  %></p>
-    </div>
-    <div class='show-button'>
-      <p><%= link_to "Show", listing_path(listing) %></p>
-    </div>
+    </a>
+    <%= image_tag listing.picture if listing.picture.attached? %>
+  </div>
+
+  <div class='listing-title'>
+    <p><%= listing.title %></p>
+  </div>
+
+  <div class='sale'>
+    <% if listing.sale_type.to_i == 1 %>
+      <p>$<%= listing.price %></p>
+    <% elsif listing.sale_type.to_i == 2 || 3 %>
+      <p><%= number_to_sale_type(listing.sale_type) %></p>
     <% end %>
   </div>
+
+  <div class='listing-description'>
+    <p><%= listing.description %></p>
+  </div>
+
+  <div class='listing-size'>
+    <p><%= number_to_size(listing.size) %></p>
+  </div>
+
+  <div class='listing-user'>
+    <p><%= link_to "#{listing.user.profile.username}", dashboard_path(id: listing.user.id)  %></p>
+  </div>
+
+  <div class='show-button'>
+    <p><%= link_to "Show", listing_path(listing) %></p>
+  </div>
+  <% end %>
+</div>
