--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,7 +1,11 @@
+
 <div class='container'>
-  <%= render 'shared/nav' %> 
- 
-  <h1>Terrarium-Town</h1>
+<%= render 'shared/nav' %> 
+  
+  <div class='terrarium'>
+      <img class='icon' src='/images/Icon.jpg'>
+    <h1>Terrarium-Town</h1>
+  </div>
 
   <div class='filter-search'>
     <div class='search'>
