--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,26 +1,25 @@
 
 <div class='container'>
 <%= render 'shared/nav' %> 
-  
-  <div class='terrarium'>
-      <img class='icon' src='/images/Icon.jpg'>
-    <h1>Terrarium-Town</h1>
-  </div>
-
+    
   <div class='filter-search'>
-    <div class='search'>
-      <%= search_form_for @q do |f| %>
-        <%= f.search_field :title_cont %>
-        <%= f.submit %>
-      <% end %> 
-    </div>
+    <div class='search-holder'>
+      <div class='filter'>
+        Sort by:
+        <%= sort_link(@q, :title, 'Title', default_order: :desc) %>
+        <%= sort_link(@q, :price, 'Price', default_order: :desc) %>
+        <%= sort_link(@q, :size, 'Size', default_order: :desc) %>
+      </div>
 
-    <div class='filter'>
-      Sort by:
-      <%= sort_link(@q, :title, 'Title', default_order: :desc) %>
-      <%= sort_link(@q, :price, 'Price', default_order: :desc) %>
-      <%= sort_link(@q, :size, 'Size', default_order: :desc) %>
+      <div class='search'>
+        <%= search_form_for @q do |f| %>
+          <%= f.search_field :title_cont %>
+          <%= f.submit %>
+        <% end %> 
+      </div>
     </div>
   </div>
+
+
   <%= render 'shared/listings' %>
 </div>
