--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,13 +1,20 @@
 
 <nav>
-    <%= link_to "Home", listings_path %>
+    <div class='nav-holder'>
+        <%= link_to "Home", listings_path %>
 
-    <% if user_signed_in? %>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        <%= link_to "Create Listing", new_listing_path %>
-        <%= link_to "My Terrariums", dashboard_path(id: current_user.id) %>
-    <% else %>
-        <%= link_to "Sign in", new_user_session_path %>
-         <%= link_to "My Terrariums", new_user_session_path %> 
-    <% end %>
+        <div class='terrarium'>
+            <img class='icon' src='/images/Icon.jpg'>
+            <h1>Terrarium-Town</h1>
+        </div>
+
+        <% if user_signed_in? %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+            <%= link_to "Create Listing", new_listing_path %>
+            <%= link_to "My Terrariums", dashboard_path(id: current_user.id) %>
+        <% else %>
+            <%= link_to "Sign in", new_user_session_path %>
+            <%= link_to "My Terrariums", new_user_session_path %> 
+        <% end %>
+    </div>
 </nav>
