--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -22,8 +22,13 @@
         </div>
 
         <div class='col-2'>
-          <div class='show-title'>
-            <p><%= @listing.title %></p>
+          <div class='title-date'>
+            <div class='show-title'>
+              <p><%= @listing.title %></p>
+            </div>
+            <div class='date'>
+              <%= created_at_to_date(@listing.created_at) %>
+            </div>
           </div>
           <div class='show-sale'>
             <% if @listing.sale_type.to_i == 1 %>
@@ -39,7 +44,7 @@
             <p><%= number_to_size(@listing.size) %></p>
           </div>
           <div class='show-user'>
-            <p><%= @listing.user.profile.username %></p>
+            <p><%= link_to "#{@listing.user.profile.username}", dashboard_path(id: @listing.user.id) %></p>
           </div>
 
           <div class="show-edit-delete">
