--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,12 @@
 <div class='container'>
   <%= render 'shared/nav' %> 
- 
-  <h1><%= @user.username %>'s Terrarium Town</h1>
-  <%= link_to "Edit Username", profile_path(id: current_user.id) %>
+  
+  <div class='user-holder'>
+    <div class='user'>
+      <h1><%= @user.username %>'s Terrarium's</h1>
+      <%= link_to "Edit Username", profile_path(id: current_user.id) %>
+    </div>
+  </div>
+
   <%= render 'shared/listings' %>
 </div>
