--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -53,8 +53,10 @@
               <%= link_to "Delete", listing_path(@listing.id), method: :delete %>
             <% end %>
 
-            <% if current_user.id != @listing.user_id %>
-              <%= link_to "Buy Terrarium", "", id: "stripe" %>
+            <% if user_signed_in? %>
+              <% if current_user.id != @listing.user_id %>
+                <%= link_to "Buy Terrarium", "", id: "stripe" %>
+              <% end %>
             <% end %>
 
             <%= link_to "Back", :back %>
