--- a/app/assets/stylesheets/listings/show.scss
+++ b/app/assets/stylesheets/listings/show.scss
@@ -38,10 +38,11 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        margin: 0px 20px 0px 20px;
+        margin: 0px 25px 0px 25px;
         .title-date{
           display: flex;
-          justify-content: space-between;          
+          justify-content: space-between;     
+          align-items: center;     
         }
         .show-edit-delete{
           display: flex;
