fixed issue where uploading an image would result in creating a blank image as well as uploading an image

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -16,8 +16,11 @@
 
         <div class='col-1'>
           <div class='show-image'>
-            <img src=<%= @listing.image %>>
-            <%= image_tag @listing.picture if @listing.picture.attached? %>
+            <% if @listing.image %>
+                <img src=<%= @listing.image %>>
+            <% else %>
+              <%= image_tag(@listing.picture) if @listing.picture.attached?%>
+            <% end %>
           </div>
         </div>
 
