--- a/app/assets/stylesheets/dashboards/show.scss
+++ b/app/assets/stylesheets/dashboards/show.scss
@@ -9,11 +9,19 @@
     align-items: center;
     background-color: #00800099;
     .user{
-      width: 100%;
+      width: 98%;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: #90ee90;
+      border-radius: 5px;
+      margin-bottom: 5px;
     }
   }
+}
+
+.bar{
+  width: 100%;
+  height: 5px;
+  background-color: #00800099;
 }
