--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @import "listings/listings";
 @import "listings/show";
 @import "dashboards/show";
+@import "profiles/show";
 
 body{
   width: 100%;
