--- a/app/views/shared/_listings.html.erb
+++ b/app/views/shared/_listings.html.erb
@@ -6,10 +6,13 @@
 
       <div class='col-1'>
         <div class='listing-image'>
-          <a href=<%= listing_path(listing) %>>
-            <img src=<%= listing.image %>>
-          </a>
-          <%= image_tag listing.picture if listing.picture.attached? %>
+          <% if listing.image %>
+            <a href=<%= listing_path(listing) %>>
+              <img src=<%= listing.image %>>
+            </a>
+          <% else %>
+            <%= link_to image_tag(listing.picture) if listing.picture.attached?%>
+          <% end %>
         </div>
       </div>
         
