--- a/app/assets/stylesheets/listings/show.scss
+++ b/app/assets/stylesheets/listings/show.scss
@@ -35,6 +35,7 @@
       }
 
       .col-2{
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
