--- a/app/assets/stylesheets/profiles/edit.scss
+++ b/app/assets/stylesheets/profiles/edit.scss
@@ -1,17 +1,20 @@
-
 .center{
   width: 100%;
   display: flex;
   justify-content: center;
   .holder{
     width: 70%;
+    display: flex;
+    justify-content: center;
     background-color: #00800099;
     padding: 0px 5px 5px 5px;
     .box{
       width:100%;
       height: 60vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       background-color: #90ee90;
-      padding: 20px;
     }
   }
 }
