--- a/app/views/shared/_listings.html.erb
+++ b/app/views/shared/_listings.html.erb
@@ -11,7 +11,7 @@
               <img src=<%= listing.image %>>
             </a>
           <% else %>
-            <%= link_to image_tag(listing.picture) if listing.picture.attached?%>
+            <%= link_to image_tag(listing.picture), listing_path(listing) %>
           <% end %>
         </div>
       </div>
