--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -1,1 +1,15 @@
-You've successfully made a payment!
+<div class='container'>
+  <%= render 'shared/nav' %> 
+  <div class='bar'></div>
+
+  <div class='center'>
+    <div class='holder'>
+      <div class='box'>
+
+        <p>You've purchased a beutiful terrarium!</p>
+        <p>Thankyou for using Terrarium-Town</p>
+
+      </div>
+    </div>
+  </div>
+</div>
