--- a/app/assets/stylesheets/profiles/edit.scss
+++ b/app/assets/stylesheets/profiles/edit.scss
@@ -15,6 +15,7 @@
       flex-direction: column;
       align-items: center;
       background-color: #90ee90;
+      border-radius: 5px;
     }
   }
 }
