--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -8,8 +8,21 @@
 
         <h1>Edit a Terrarium Listing! </h1>
 
-        <%= form_with scope: @listing, url: listing_path, local: true, method: "patch" do |form| %>
+        <%= form_with scope: @listing, url: listing_path, local: true, method: :patch do |form| %>
           
+          <% if @listing.errors.any? %>
+            <div class="alert-warning">
+              <h2>
+                <%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:
+              </h2>
+              <ul>
+                <% @listing.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
           <div>
             <%= form.label :title %>
             <%= form.text_field :title %>
