--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -8,8 +8,22 @@
 
         <h1>Create a Terrarium Listing! </h1>
 
-        <%= form_with scope: @listing, url: listings_url, local: true do |form| %>
-          
+        <%= form_with scope: @listing, url: listings_url, local: true do |form| %> 
+
+          <% if @listing.errors.any? %>
+            <div class="alert-warning">
+              <h2>
+                <%= pluralize(@listing.errors.count, "error") %> prohibited
+                this listing from being saved:
+              </h2>
+              <ul>
+                <% @listing.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
           <div>
             <%= form.label :title %>
             <%= form.text_field :title %>
@@ -17,7 +31,7 @@
         
           <div>
             <%= form.label :description %>
-            <%= form.text_field :description %>
+            <%= form.text_area :description %>
           </div>
 
           <div>
@@ -56,8 +70,7 @@
             <%= form.submit %>
           </div>  
 
-        <% end %>
-
+          <% end %>
         <%= javascript_pack_tag 'new' %>
       </div>
     </div>
