updated edit form with button selectors

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -27,21 +27,37 @@
             <%= form.label :title %>
             <%= form.text_field :title %>
           </div>
-          <div>
-            <%= form.label :price %>
-            <%= form.number_field :price %>
-          </div>
+
           <div>
             <%= form.label :description %>
-            <%= form.text_field :description %>
+            <%= form.text_area :description %>
           </div>
+
           <div>
-            <%= form.label :sale_type %>
-            <%= form.number_field :sale_type %>
+            <%= form.radio_button :sale_type, 1, :checked => true, class: 'sale_type' %> 
+            <%= label :sale_type, 'Sell' %>
+            <%= form.radio_button :sale_type, 2, class: 'sale_type' %>
+            <%= label :sale_type, 'Swap/Trade' %>
+            <%= form.radio_button :sale_type, 3, class: 'sale_type' %>
+            <%= label :sale_type, 'Free' %>
           </div>
+        
+          <div id='price'>
+              <%= form.label :price %>
+              <%= form.number_field :price %>
+          </div>
+
           <div>
-            <%= form.label :size %>
-            <%= form.number_field :size %>
+            <%= form.radio_button :size, 1, :checked => true %> 
+            <%= label :size, 'X-Small' %>
+            <%= form.radio_button :size, 2 %> 
+            <%= label :size, 'Small' %>
+            <%= form.radio_button :size, 3 %> 
+            <%= label :size, 'Medium' %>
+            <%= form.radio_button :size, 4 %> 
+            <%= label :size, 'Large' %>
+            <%= form.radio_button :size, 5 %> 
+            <%= label :size, 'X-Large' %>
           </div>
 
           <div>
