--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -7,7 +7,7 @@
       <div class='user'>
         <h1><%= @user.username %>'s Terrarium's</h1>
         <% if current_user.profile.username == @user.username  %>
-          <%= link_to "Username",  edit_profile_path(current_user) %>
+          <%= link_to "Edit",  edit_profile_path(current_user) %>
         <% end %>
       </div>
     </div>
