--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -35,6 +35,7 @@
           </div>
 
           <div>
+            <br>
             <%= form.radio_button :sale_type, 1, :checked => true, class: 'sale_type' %> 
             <%= label :sale_type, 'Sell' %>
             <%= form.radio_button :sale_type, 2, class: 'sale_type' %>
@@ -44,11 +45,14 @@
           </div>
         
           <div id='price'>
-              <%= form.label :price %>
-              <%= form.number_field :price %>
+            <br>
+            <%= form.label 'Sale Price $' %>
+            <%= form.number_field :price %>
           </div>
 
           <div>
+            <br>
+            Terrarium Size <br>
             <%= form.radio_button :size, 1, :checked => true %> 
             <%= label :size, 'X-Small' %>
             <%= form.radio_button :size, 2 %> 
@@ -62,11 +66,13 @@
           </div>
 
           <div>
+            <br>
             <%= form.label :picture %> 
             <%= form.file_field :picture, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
           </div>
 
           <div>
+            <br>
             <%= form.submit %>
           </div>  
 
