--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,13 +8,14 @@
             <h1>Terrarium-Town</h1>
         </div>
 
+
         <% if user_signed_in? %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete %>
             <%= link_to "Create Listing", new_listing_path %>
             <%= link_to "My Terrariums", dashboard_path(id: current_user.id) %>
         <% else %>
             <%= link_to "Sign in", new_user_session_path %>
-            <%= link_to "My Terrariums", new_user_session_path %> 
+            <%= link_to "Register", new_user_registration_path %> 
         <% end %>
     </div>
 </nav>
